[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "savehaven"
version = "0.1.0"
authors = [
  { name="Aurelia Aurita", email="aurliaanoop@proton.me" },
]
description = "Command line tool to sync video game files to Google Drive"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/RNKnight1/SaveHaven"
"Bug Tracker" = "https://github.com/RNKnight1/SaveHaven/issues"