[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "savehaven"
version = "0.3.1"
dependencies = ["appdirs", "argparse", "bs4", "configparser", "datetime", "requests", "google", "google-api-python-client","google-auth-httplib2", "google-auth-oauthlib", "inquirer", "tqdm", "pyfzf"]
authors = [
  { name="Aurelia Aurita", email="aurliaanoop@proton.me" },
]
description = "Command line tool to sync video game files to Google Drive"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/RNKnight1/SaveHaven"
"Bug Tracker" = "https://github.com/RNKnight1/SaveHaven/issues"

[project.scripts]
savehaven = "savehaven.__main__:main"
